--- a/src/app/util/user-name/user-name.component.html
+++ b/src/app/util/user-name/user-name.component.html
@@ -11,3 +11,4 @@
         {{ target?.getUsername() | async }}
     </span>
 </span>
+<div *ngIf="contextMenu" [matMenuTriggerFor]="contextMenu" #contextMenuTrigger></div>
