--- a/src/app/emotes/emote/emote.component.html
+++ b/src/app/emotes/emote/emote.component.html
@@ -47,7 +47,7 @@
 	
 	<!-- Preview sizes -->
 	<div class="d-block" [appColor]="themingService.bg.darken(.075)" [isBackground]="true">
-		<div class="d-flex flex-row align-items-center justify-content-center sizes-preview mt-1">
+		<div class="d-flex flex-row align-items-end justify-content-center sizes-preview mt-1">
 			<!-- Size -->
 			<div class="size-preview d-flex flex-column justify-content-end align-items-center" [style.height.px]="MAX_HEIGHT" *ngFor="let size of sizes | async">
 				<div class="preview-img" [ngSwitch]="isProcessing() | async">
@@ -55,7 +55,14 @@
 					<mat-spinner [diameter]="32 * size.scope" *ngSwitchCase="true"></mat-spinner>
 				</div>
 
-				<span class="mt-2"> {{size.scope}}x </span>
+				<div class="divider">
+					<mat-divider></mat-divider>
+				</div>
+
+				<span class="scope-label">
+					<div class="size-tag mt-2"> {{size.scope}}x </div>
+					<div class="size-x"> {{size.width}}x{{size.height}} </div>
+				</span>
 			</div>
 		</div>
 
