Home - Release Chatterino

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
 			
 			<div *ngFor="let icon of browserIcons">
 				<div class="browser-icon">	
-					<div class="tag" [appColor]="icon.tag?.color" [isBackground]="true">
+					<div class="tag" [class.new]="icon.tag?.new" [appColor]="icon.tag?.color" [isBackground]="icon.tag?.new || true">
 						<span>{{icon.tag?.label}}</span>
 					</div>
 	
