--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -36,6 +36,43 @@
 		span {
 			margin: .3em;
 		}
+
+		&.new {
+			background: linear-gradient(124deg, #ff2400, #e81d1d, #2f9740, #3b9194, #2b1de8, #dd00f3, #dd00f3);
+			background-size: 1800% 1800%;
+			span {
+				color: white;
+				font-weight: bold;
+				letter-spacing: 1px;
+				padding: .5em;
+			}
+
+			-webkit-animation: rainbow 9s ease infinite;
+			-z-animation: rainbow 9s ease infinite;
+			-o-animation: rainbow 9s ease infinite;
+			animation: rainbow 9s ease infinite;
+
+			@-webkit-keyframes rainbow {
+				0%{background-position:0% 82%}
+				50%{background-position:100% 19%}
+				100%{background-position:0% 82%}
+			}
+			@-moz-keyframes rainbow {
+				0%{background-position:0% 82%}
+				50%{background-position:100% 19%}
+				100%{background-position:0% 82%}
+			}
+			@-o-keyframes rainbow {
+				0%{background-position:0% 82%}
+				50%{background-position:100% 19%}
+				100%{background-position:0% 82%}
+			}
+			@keyframes rainbow { 
+				0%{background-position:0% 82%}
+				50%{background-position:100% 19%}
+				100%{background-position:0% 82%}
+			}
+		}
 	}
 }
 
