--- a/src/app/home/chatterino-dialog/chatterino-dialog.component.html
+++ b/src/app/home/chatterino-dialog/chatterino-dialog.component.html
@@ -3,7 +3,7 @@
 		<div class="title">
 			<h3>DOWNLOAD CHATTERINO7</h3>
 			<p class="notice">
-				This is an unofficial fork of Chatterino independently maintained by the 7TV Dev Team. It adds a new provider to serve 7TV emotes, and otherwise stays in line the upstream.
+				This is an unofficial fork of Chatterino independently maintained by the 7TV Dev Team. It adds a new provider to serve 7TV emotes, and otherwise stays in line with the upstream.
 				<a href="https://github.com/SevenTV/chatterino7/" target="_blank">View on GitHub.</a>
 			</p>
 		</div>
