--- a/src/app/home/chatterino-dialog/chatterino-dialog.component.scss
+++ b/src/app/home/chatterino-dialog/chatterino-dialog.component.scss
@@ -20,6 +20,9 @@
 			.platform-icon {
 				cursor: pointer;
 				color: white;
+				margin-top: 3em;
+				margin-right: 4em;
+				margin-left: 4em;
 			}
 		}
 	}
