--- a/src/app/user/user-home/user-home.component.scss
+++ b/src/app/user/user-home/user-home.component.scss
@@ -3,7 +3,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 12em;
+	min-width: 12em;
+	width: fit-content;
 	height: 32px;
 	padding: 1em;
 	border-top-left-radius: 8px;
