--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -43,16 +43,19 @@
                 }
 
                 .user-role {
-                    display: flex;
+                    display: inline-flex;
                     justify-content: flex-end;
-                    margin-top: .75em;
-                    padding-right: 1em;
                     width: 100%;
-                    height: 2em;
 
-                    padding-bottom: 1em;
-                    border-top-left-radius: 8px;
-                    border-top-right-radius: 8px;
+                    span {
+                        display: flex;
+                        font-size: .65rem;
+                        padding: .75em;
+                    }
+
+                    div {
+                        border-bottom-left-radius: 8px;
+                    }
                 }
             }
         }
