Home - add link to Terms of Service

--- a/src/app/home/legal/tos.component.html
+++ b/src/app/home/legal/tos.component.html
@@ -111,7 +111,7 @@
 	<h3>Reporting copyright infringement</h3>
 	
 	
-	<p>If you would like to notify us of the infringing material or activity, you may send an email to cupofeggy@gmail.com.
+	<p>If you would like to notify us of the infringing material or activity, you may send an email to {{email}}.
 	
 	
 	<p class="text-primary">This document was last updated on {{updatedOn}}</p><p>
