--- a/src/app/home/legal/privacy.component.html
+++ b/src/app/home/legal/privacy.component.html
@@ -144,6 +144,6 @@
 	<h1>Contact Us</h1>
 	<p>If you have any questions about this Privacy Policy, You can contact us:</p>
 	<ul>
-	<li>By email: cupofeggy@gmail.com</li>
+	<li>By email: {{email}}</li>
 	</ul>
 </div>
