Create Emote - Require TOS agreement before proceeding

--- a/src/app/home/legal/tos.component.html
+++ b/src/app/home/legal/tos.component.html
@@ -6,7 +6,7 @@
 	<p>Please read these Terms of Service (“terms”, “terms of service”) carefully before using the 7tv.app website and/or the 7TV browser extension operated by 7TV (“us”, “we”, “our”).
 	
 	<h3>Conditions of use</h3>
-	<p>We will provide their services to you, which are subject to the conditions stated below. Every time you visit this website, use its services, or install the 7TV extension app, you accept the following conditions. We encourage you to read them carefully. 
+	<p>We will provide these services to you, which are subject to the conditions stated below. Every time you visit this website, use its services, or install the 7TV extension app, you accept the following conditions. We encourage you to read them carefully. 
 
 	<h3>Privacy Policy</h3>
 	<p>Before you continue using our website we advise you to read our <a [routerLink]="['/legal', 'privacy']">privacy policy</a> regarding our user data collection. It will help you to better understand our practices.
