--- a/src/app/admin/mod-queue/admin-mod-queue.component.html
+++ b/src/app/admin/mod-queue/admin-mod-queue.component.html
@@ -3,28 +3,32 @@
 
 	<div class="hidden-emote-list">
 		<div class="hidden-emote" *ngFor="let emote of emotes | async; let last = last;">
-			<div class="emote-display" (click)="openEmote(emote)">
-				<img [src]="emote.getURL(3) | async">
+			<div class="d-flex flex-grow-1 flex-column">
+				<div class="d-flex flex-row">
+					<div class="emote-display" (click)="openEmote(emote)">
+						<img [src]="emote.getURL(3) | async">
 
-				<span>
-					<span class="emote-name">{{emote.getName() | async}}</span>
-					<span [style.color]="(emote.getOwner() | async)?.getColor() | async" class="emote-author">
-						[{{((emote.getOwner() | async)?.getRole() | async)?.getName() | async | uppercase}}]
-						{{emote.getOwner() | async}}
-					</span>
-				</span>
-			</div>
+						<span>
+							<span class="emote-name">{{emote.getName() | async}}</span>
+							<span [style.color]="(emote.getOwner() | async)?.getColor() | async" class="emote-author">
+								[{{((emote.getOwner() | async)?.getRole() | async)?.getName() | async | uppercase}}]
+								{{emote.getOwner() | async}}
+							</span>
+						</span>
+					</div>
 
-			<div class="emote-actions">
-				<div class="emote-action" *ngFor="let action of actions" (click)="useAction(action, emote)">
-					<button color="primary" mat-icon-button [matTooltip]="action.label">
-						<mat-icon> {{action.icon}} </mat-icon>
-					</button>
+					<div class="emote-actions">
+						<div class="emote-action" *ngFor="let action of actions" (click)="useAction(action, emote)">
+							<button color="primary" mat-icon-button [matTooltip]="action.label">
+								<mat-icon> {{action.icon}} </mat-icon>
+							</button>
+						</div>
+					</div>
 				</div>
-			</div>
 
-			<div class="w-100" *ngIf="!last" class="user-column-divider">
-				<mat-divider></mat-divider>
+				<div class="w-100" *ngIf="!last" class="user-column-divider">
+					<mat-divider></mat-divider>
+				</div>
 			</div>
 		</div>
 	</div>
