--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -1,14 +1,14 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import './default.scss';
-@include mat-core();
+@include mat.core();
 
 .theme-dark {
-	$dark-primary: mat-palette($mat-light-blue, 800);
-	$dark-accent: mat-palette($mat-light-green, A200, A100, A400);
-	$dark-warn: mat-palette($mat-red);
-	$dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+	$dark-primary: mat.define-palette(mat.$light-blue-palette, 800);
+	$dark-accent: mat.define-palette(mat.$light-green-palette, A200, A100, A400);
+	$dark-warn: mat.define-palette(mat.$red-palette);
+	$dark-theme: mat.define-dark-theme($dark-primary, $dark-accent, $dark-warn);
 
-	@include angular-material-theme($dark-theme);
+	@include mat.all-component-themes($dark-theme);
 
 	@at-root main.theme-dark {
 		@include global-theming($dark-theme);
